--- a/01-frontend/03-main-framework/01-vue-stack/01-vue/10-插槽.md
+++ b/01-frontend/03-main-framework/01-vue-stack/01-vue/10-插槽.md
@@ -5,6 +5,7 @@
 注意：`<slot />`无法直接绑事件，需要外面加一层以绑事件
 
 ```js
+// 插槽提供者
 Vue.component("myform", {
     methods: {
         handleClick() {
@@ -21,6 +22,7 @@ Vue.component("myform", {
 	`
 })
 
+// 插槽使用者
 new Vue({
     template: `
 	<myform>
@@ -54,6 +56,7 @@ new Vue({
 `v-slot:插槽名`，注意配合`template`标签使用
 
 ```js
+// 插槽提供者
 Vue.component("layout", {
     methods: {
         handleClick() {
@@ -69,6 +72,7 @@ Vue.component("layout", {
 	`
 })
 
+// 插槽使用者
 new Vue({
     template: `
     <layout>
@@ -88,6 +92,7 @@ new Vue({
 `v-slot:插槽名`可以简化为`#插槽名`
 
 ```js
+// 插槽提供者
 Vue.component("layout", {
     methods: {
         handleClick() {
@@ -103,6 +108,7 @@ Vue.component("layout", {
 	`
 })
 
+// 插槽使用者
 new Vue({
     template: `
 		<layout>
@@ -142,6 +148,7 @@ new Vue({
 父级组件替换插槽的标签，但是内容由子组件提供
 
 ```js
+// 插槽提供者
 Vue.component("list", {
     data() {
         return {
@@ -155,6 +162,7 @@ Vue.component("list", {
 	`
 })
 
+// 插槽使用者
 new Vue({
     template: `
     <list v-slot="slotProps">
@@ -167,6 +175,7 @@ new Vue({
 ### 简化写法：解构赋值
 
 ```js
+// 插槽提供者
 Vue.component("list", {
     data() {
         return {
@@ -180,6 +189,7 @@ Vue.component("list", {
 	`
 })
 
+// 插槽使用者
 new Vue({
     template: `
 	<list v-slot="{item}">
@@ -211,7 +221,7 @@ this.$scopedSlots
 ### v-slot指令完整写法
 
 ```html
-v-slot:插槽名="子组件提供的数据"
+v-slot:插槽名="插槽提供者提供的数据"
 ```
 
 ### v-slot书写位置
@@ -307,3 +317,46 @@ v-slot:插槽名="子组件提供的数据"
   </template>
 </current-user>
 ```
+
+
+
+## 插槽的通信
+
+### 概述
+
+对于普通的父子组件，两者通讯用下列方法
+
+* 父组件 =>子组件：使用 props 属性
+
+* 子组件 => 父组件：使用 v-on 和 emit 事件
+
+对于插槽，可以区分出**插槽提供者**和**插槽使用者**两种类型的组件
+
+* 插槽提供者 => 插槽使用者：使用作用域插槽，即slotProps
+* 插槽使用者 => 插槽提供者：
+  * 无法使用普通的 v-on和emit 事件
+  * 因为 `slot` 组件上不能绑定事件，即无法使用 v-on 指令，也无法使用 ref 属性
+  * 也就是说，插槽使用者无法通过 emit事件的方式与插槽提供者通信
+
+### 解决思路
+
+使用事件侦听器，新建`emitter`对象，在**插槽提供者**中通过`emitter.on`绑定事件；在**插槽使用者**中通过`emitter.emit`触发事件，从而实现 **插槽使用者 => 插槽提供者** 的通讯方式
+
+### 解决方案
+
+在 Vue2 中，Vue组件自带有 `$on，$off，$once`等方法，直接使用即可
+
+```js
+import CustomForm from "./CustomForm.vue"l
+
+// 绑定事件
+const handler = (...args) => {
+    console.log(...args);
+}
+
+CustomForm.$on("create", handler);
+
+// 触发事件
+CustomForm.$emit("create", "Hello World");
+```
+
