--- a/01-frontend/03-main-framework/01-vue-stack/02-vue3/01-初识Vue3.md
+++ b/01-frontend/03-main-framework/01-vue-stack/02-vue3/01-初识Vue3.md
@@ -1,6 +1,14 @@
 ## 初识Vue3
 
+### 概述
+
 Vue3是使用 Typescript + Proxy 重写的 Vue 框架
+
+### 为啥需要Vue3
+
+* 随着功能的增长，复杂组件的代码变得难以维护
+* Vue2 对 Typescript支持非常有限
+* Mixin存在较多缺点，如来源不清、命名冲突等
 
 ### 用户侧改变
 
