--- a/01-frontend/03-main-framework/01-vue-stack/02-vue3/05-组件化.md
+++ b/01-frontend/03-main-framework/01-vue-stack/02-vue3/05-组件化.md
@@ -195,7 +195,7 @@ app.component("demo", {
 
 ### 非 prop 的 attribute
 
-#### 概念
+#### 概述
 
 定义：非 prop 的 attribute 是指传向一个组件，但是该组件并没有相应 prop 定义的 attribute，该 attribute 将被添加到组件的根元素上
 
@@ -281,6 +281,18 @@ app.component("base-input", {
 	</label>
 	`
 })
+```
+
+### 注入全部属性
+
+有时候，需要将传递给组件的`attrs`全部注入到组件中的某个标签元素上
+
+比如封装了一个 `CustomInput` 组件，需要将该 `CustomInput`组件上的`非props属性`全部注入到`CustomInput`组件中的`input`组件上
+
+方法：使用`v-bind="$attrs"`
+
+```html
+<input v-bind="$attrs" />
 ```
 
 
