--- a/01-frontend/03-main-framework/01-vue-stack/02-vue3/06-双向绑定.md
+++ b/01-frontend/03-main-framework/01-vue-stack/02-vue3/06-双向绑定.md
@@ -140,6 +140,13 @@ app.component('my-component', {
 })
 ```
 
+### Vue3与Vue2的v-model对比
+
+| 框架 | 对比                                                         |
+| ---- | ------------------------------------------------------------ |
+| Vue2 | 仅仅支持**一个v-model**，可以根据**model选项**改变**prop名（默认为value）**和**事件（默认为input）** |
+| Vue3 | 支持**多个v-model**，可自定义**prop名（默认为modellValue），事件（默认为 update:modelValue）** |
+
 
 
 ## 表单中的v-model
