--- a/01-frontend/03-main-framework/01-vue-stack/02-vue3/10-插槽.md
+++ b/01-frontend/03-main-framework/01-vue-stack/02-vue3/10-插槽.md
@@ -5,6 +5,7 @@
 注意：`<slot />`无法直接绑事件，需要外面加一层以绑事件
 
 ```js
+// 插槽使用者
 const app = Vue.createApp({
     template: `
 	<myform>
@@ -16,6 +17,7 @@ const app = Vue.createApp({
 	`
 })
 
+// 插槽提供者
 app.component("myform", {
     methods: {
         handleClick() {
@@ -54,6 +56,7 @@ app.component("myform", {
 `v-slot:插槽名`，注意配合`template`标签使用
 
 ```js
+// 插槽使用者
 const app = Vue.createApp({
     template: `
     <layout>
@@ -67,6 +70,7 @@ const app = Vue.createApp({
 	`
 })
 
+// 插槽提供者
 app.component("layout", {
     methods: {
         handleClick() {
@@ -88,6 +92,7 @@ app.component("layout", {
 `v-slot:插槽名`可以简化为`#插槽名`
 
 ```js
+// 插槽使用者
 const app = Vue.createApp({
     template: `
 		<layout>
@@ -101,6 +106,7 @@ const app = Vue.createApp({
 	`
 })
 
+// 插槽提供者
 app.component("layout", {
     methods: {
         handleClick() {
@@ -119,7 +125,13 @@ app.component("layout", {
 
 ### 默认插槽名称
 
-默认插槽（不写`name`属性的插槽）的名称是`default`
+默认插槽（不写`name`属性的插槽）的名称是`default`，即
+
+```html
+<slot></slot>
+<!-- 等价于 -->
+<slot name="default"></slot>
+```
 
 ### 动态插槽名
 
@@ -142,6 +154,7 @@ app.component("layout", {
 父级组件替换插槽的标签，但是内容由子组件提供
 
 ```js
+// 插槽使用者
 const app = Vue.createApp({
     template: `
     <list v-slot="slotProps">
@@ -150,6 +163,7 @@ const app = Vue.createApp({
 	`
 })
 
+// 插槽提供者
 app.component("list", {
     data() {
         return {
@@ -203,7 +217,7 @@ app.component("list", {
 ### v-slot指令完整写法
 
 ```html
-v-slot:插槽名="子组件提供的数据"
+v-slot:插槽名="插槽提供者提供的数据"
 ```
 
 ### v-slot书写位置
@@ -298,4 +312,57 @@ v-slot:插槽名="子组件提供的数据"
     ...
   </template>
 </current-user>
+```
+
+
+
+## 插槽的通信
+
+### 概述
+
+对于普通的父子组件，两者通讯用下列方法
+
+* 父组件 =>子组件：使用 props 属性
+
+* 子组件 => 父组件：使用 v-on 和 emit 事件
+
+对于插槽，可以区分出**插槽提供者**和**插槽使用者**两种类型的组件
+
+* 插槽提供者 => 插槽使用者：使用作用域插槽，即slotProps
+* 插槽使用者 => 插槽提供者：
+  * 无法使用普通的 v-on和emit 事件
+  * 因为 `slot` 组件上不能绑定事件，即无法使用 v-on 指令，也无法使用 ref 属性
+  * 也就是说，插槽使用者无法通过 emit事件的方式与插槽提供者通信
+
+### 解决思路
+
+使用事件侦听器，新建`emitter`对象，在**插槽提供者**中通过`emitter.on`绑定事件；在**插槽使用者**中通过`emitter.emit`触发事件，从而实现 **插槽使用者 => 插槽提供者** 的通讯方式
+
+### 解决方案
+
+在 Vue3 中，由于移除了`$on，$off，$once`等方法，所以需要引入第三方库，官方推荐使用 `mitt` 库
+
+```shell
+npm install mitt --save
+# OR
+yarn add mitt
+```
+
+使用示例
+
+```js
+// 导入 mitt 库
+import mitt from "mitt";
+
+// 新建 emitter 对象
+const emitter = mitt();
+
+// 绑定事件
+const handler = (...args) => {
+    console.log(...args);
+};
+emitter.on("create", handler);
+
+// 触发事件
+emitter.emit("create", "Hello World")
 ```
