--- a/01-frontend/01-basic/03-javascript/07-语句.md
+++ b/01-frontend/01-basic/03-javascript/07-语句.md
@@ -114,6 +114,32 @@ apple: for(let i = 1; i <= 10; i++) {
 
 ### 增强循环语句
 
+#### forEach
+
+```js
+new Array(5).fill(0).forEach(item => conosle.log(item));
+```
+
+跳出forEach循环的方式：因为forEach是通过回调函数的形式来执行循环的，所以比较难跳出循环
+
+如果需要跳出循环的操作，则不推荐使用 forEach 形式，考虑使用普通循环
+
+如果确实需要在 forEach 循环中跳出，则需要使用抛出错误的方式
+
+```js
+try {
+    arr.forEach((item, index) => {
+        if (index === 2) {
+            throw new Error();
+        }
+    })
+} catch (e) {
+    console.log("跳出了循环");
+}
+```
+
+
+
 #### for-in
 
 ```js
