--- a/01-frontend/01-basic/03-javascript/40-网络请求.md
+++ b/01-frontend/01-basic/03-javascript/40-网络请求.md
@@ -754,11 +754,9 @@ axios.interceptors.response.use(response => {
 
 #### 多个拦截器顺序
 
-多个请求拦截器：后添加，先执行，相当于 unshift
+多个请求拦截器：后添加，先执行，相当于 **unshift**，栈结构
 
-多个响应拦截器：后添加，后执行，相当于 push
-
-可以用**洋葱模型**进行记忆
+多个响应拦截器：后添加，后执行，相当于 **push**，队列结构
 
 ### 创建axios实例
 
