--- a/01-frontend/01-basic/03-javascript/74-专题：上传与下载文件.md
+++ b/01-frontend/01-basic/03-javascript/74-专题：上传与下载文件.md
@@ -225,7 +225,7 @@ export default {
         const fileInput = ref(null);
         
         const handleFileChange = (e: Event) => {
-            const target = e as HTMLInputElement;
+            const target = e.target as HTMLInputElement;
             
             const files = target.files;
             
@@ -299,7 +299,7 @@ export default {
         const fileUploadStatus = ref<UploadStatus>("ready"); // 初始状态为 ready
         
         const handleFileChange = (e: Event) => {
-            const target = e as HTMLInputElement;
+            const target = e.target as HTMLInputElement;
             
             if (target.files) {
                 fileUploadStatus.value = "uploading" ; // 更改状态为 uploading
@@ -403,7 +403,7 @@ export default {
         const fileUploadStatus = ref<UploadStatus>("ready"); // 初始状态为 ready
         
         const handleFileChange = (e: Event) => {
-            const target = e as HTMLInputElement;
+            const target = e.target as HTMLInputElement;
             
             if (target.files) {
                 const files = Array.from(target.files); // 伪数组转为数组
@@ -515,7 +515,7 @@ export default {
         const uploadedData = ref();
         
         const handleFileChange = (e: Event) => {
-            const target = e as HTMLInputElement;
+            const target = e.target as HTMLInputElement;
             
             if (target.files) {
                 const files = Array.from(target.files); // 伪数组转为数组
