--- a/01-frontend/02-advance/03-skills/04-样式技巧.md
+++ b/01-frontend/02-advance/03-skills/04-样式技巧.md
@@ -90,6 +90,18 @@ header__item--active
 
 
 
+## 字体图标
+
+### 常用网站
+
+阿里巴巴字体图标库：[iconfont](iconfont.cn)
+
+### 使用心得
+
+`iconfont` 字体文件支持CDN引入，不需要在项目中加入字体文件（减少打包大小）
+
+
+
 ## 其他小技巧
 
 ### 设置小于12px的字体大小
@@ -112,6 +124,8 @@ transform-origin: center top;
 
 原理：`padding-bottom`，如果值是百分比，则最终计算值为（宽度 * 百分比）
 
+百分比计算公式：图片高度 / 图片宽度
+
 ```css
 .banner {
   img {
@@ -130,3 +144,4 @@ SCSS和LESS都支持变量，所以可以使用变量表示颜色，方便统一
 $font-color: #F5F5F5;
 $bg-color: #66CCFF;
 ```
+
