--- a/01-frontend/03-main-framework/01-vue-stack/01-vue/03-常用选项.md
+++ b/01-frontend/03-main-framework/01-vue-stack/01-vue/03-常用选项.md
@@ -1,3 +1,15 @@
+## name
+
+### 定义
+
+组件的名称，常用于在 `vue devtools` 中显示
+
+### 默认值
+
+如果不设置 name 属性，则 @vue/cli 默认将组件的文件名作为组件的名称
+
+
+
 ## data
 
 ### 定义
