--- a/01-frontend/03-main-framework/01-vue-stack/01-vue/11-渲染函数.md
+++ b/01-frontend/03-main-framework/01-vue-stack/01-vue/11-渲染函数.md
@@ -56,7 +56,7 @@ Vue.component("my-title", {
 
 ## Vue渲染流程
 
-template ==> 编译 ==> h函数 ==> 执行返回 VNode ==> 真实dom ==> 展示到页面上
+template ==> 编译为render函数 ==> render函数执行 ==> h函数 ==> 执行返回 VNode(虚拟DOM) ==> 真实dom ==> 展示到页面上
 
 
 
