--- a/01-frontend/03-main-framework/01-vue-stack/02-vue3/07-提供与注入.md
+++ b/01-frontend/03-main-framework/01-vue-stack/02-vue3/07-提供与注入.md
@@ -27,7 +27,7 @@ app.component("child-child", {
 
 ## 解决方法：使用provide/inject
 
-使用Provide/Inject进行注入，类似于 React中的Context
+使用Provide/Inject进行注入，类似于 React 中的 Context
 
 ```js
 const app = Vue.createApp({
@@ -86,7 +86,7 @@ const app = Vue.createApp({
 app.provide("count", 1) // 来定义provide
 ```
 
-### provide/inject存在问题：不具有响应式特点
+### provide/inject特点：不具有响应式特点
 
 如果更新父组件中的值，子组件也不会响应刷新
 
