--- a/01-frontend/03-main-framework/01-vue-stack/02-vue3/09-混入.md
+++ b/01-frontend/03-main-framework/01-vue-stack/02-vue3/09-混入.md
@@ -1,18 +1,16 @@
-## mixin功能
+## mixin概述
+
+### mixin功能
 
 mixin是混合的意思，能够将代码混合入Vue实例中，从而实现**代码和逻辑的复用**
 
+### mixin特点
 
-
-## mixin特点
-
-* 组件内部data, methods 优先级高于mixin，mixin后面覆盖前面（在发生冲突时以组件数据优先）
-
+* 除了 data 外，只要是选项都可以进行混入
+* 组件内部选项优先级高于mixin，mixin后面覆盖前面（在发生冲突时以组件数据优先）
 * 生命周期函数，先执行mixin里面的，再执行组件里面的
 
-
-
-## mixin缺点
+### mixin缺点
 
 * 变量来源不明确，不利于阅读
 * 多个mixin可能会造成命名冲突
