--- a/01-frontend/03-main-framework/01-vue-stack/02-vue3/10-插槽.md
+++ b/01-frontend/03-main-framework/01-vue-stack/02-vue3/10-插槽.md
@@ -47,6 +47,16 @@ app.component("myform", {
 </button>
 ```
 
+### 插槽循环
+
+`<slot>`标签是可以应用 `v-for` 循环的
+
+```html
+<slot v-for="item in list" :key="item.id"></slot>
+```
+
+
+
 
 
 ## 具名插槽
