--- a/01-frontend/01-basic/05-typescript/08-声明文件.md
+++ b/01-frontend/01-basic/05-typescript/08-声明文件.md
@@ -12,6 +12,12 @@
 
 
 
+## 作用
+
+`.d.ts` 文件只包含类型声明，不包含逻辑，不会被编译、也不会被 `webpack` 打包
+
+
+
 ## 第三方声明文件库
 
 对于常用的，流行的第三方库，`微软官方`和`DefinitelyTyped`已经写好了，直接使用即可
@@ -21,3 +27,26 @@ https://github.com/DefinitelyTyped/DefinitelyTyped/
 https://microsoft.github.io/TypeSearch/
 
 此外，目前流行的第三方库，在其库文件中自带有声明文件，即只要通过npm安装，就会顺带安装这些声明文
+
+
+
+## 示例
+
+```typescript
+declare module "*.css" {
+    const css: { [key: string]: string };
+    export default css;
+}
+```
+
+```typescript
+declare module "*.svg" {
+    import * as React from "react";
+    
+    export const ReactComponent: React.FC<React.SVGProps<SVGSVGElment>> & { title?: string }>;
+    
+    const src: string;
+    export default src;
+}
+```
+
