--- a/01-frontend/01-basic/05-typescript/02-类型增强.md
+++ b/01-frontend/01-basic/05-typescript/02-类型增强.md
@@ -239,7 +239,7 @@ a = {}
 
 用户：两个顶级类型之一，所有类型也都可以赋值给`unknown`
 
-特点：`unkonwn` 类型对象只能赋值给`any`或者`unknown`，不能赋值给其他类型
+特点：`unkonwn` 类型对象只能赋值给`any`或者`unknown`，不能赋值给其他类型；不能使用unkonwn类型上任何的方法和属性，否则会报错
 
 来源：如果使用`any`类型，将不进行类型检查，就无法使用`TS`提供的大量的保护机制，为了解决这个问题，`TS 3.0` 引入了 `unknown` 类型
 
@@ -787,10 +787,11 @@ Typescript 还提供了一些功能性，帮助性的类型
 
 这些类型，在 Js 的世界是看不到的，这些类型叫做 `Utility Types`，提供一些简洁明快而且非常方便的功能
 
-| 工具类型    | 说明                               |
-| ----------- | ---------------------------------- |
-| Partial\<T> | 把传入的类型都变为可选，返回新类型 |
-| Omit\<T, K> | 忽略类型中的某个属性，返回新类型   |
+| 工具类型                                      | 说明                               |
+| --------------------------------------------- | ---------------------------------- |
+| `Partial<T>`                                  | 把传入的类型都变为可选，返回新类型 |
+| `Omit<T, K>`                                  | 忽略类型中的某个属性，返回新类型   |
+| `ReturnType<T extends (...args: any) => any>` | 用于提取函数的返回值的类型         |
 
 ### 例子
 
