--- a/01-frontend/02-advance/03-skills/01-常用插件.md
+++ b/01-frontend/02-advance/03-skills/01-常用插件.md
@@ -2,6 +2,17 @@
 
 在 VS Code 中集成 ESLint JavaScript 规范
 
+禁用eslint规则：`eslint-disable-next-line 规则名称`
+
+```tsx
+export const useMount = (callback: () => void) => {
+    useEffect(() => {
+        callback();
+        // eslint-disable-next-line react-hooks/exhaustive-deps
+    }, [])
+}
+```
+
 
 
 ## Vetur
