--- a/01-frontend/02-advance/03-skills/06-路由技巧.md
+++ b/01-frontend/02-advance/03-skills/06-路由技巧.md
@@ -76,3 +76,23 @@ const routes = [{
 
 
 
+## React中
+
+### 渲染判断鉴权
+
+在开发中，我们可能遇到这样的场景
+
+* 某些页面是必须用户登录成功才能进行进入
+* 如果用户没有登录成功，那么直接跳转到登录页面
+
+```jsx
+function loginAuth(Page) {
+    return props => {
+        if (isLogin) {
+            return <Page />
+        } else {
+            return <LoginPage />
+        }
+    }
+}
+```
