--- a/01-frontend/02-advance/03-skills/07-网络请求.md
+++ b/01-frontend/02-advance/03-skills/07-网络请求.md
@@ -161,3 +161,58 @@ const useCurrentListEffect = (currentTab) => {
     return { list };
 };
 ```
+
+
+
+## React处理网络请求
+
+### React Hooks中
+
+```tsx
+const [loading, setLoading] = useState<boolean>(false);
+const [error, setError] = useState<string | null>(null);
+const [data, setData] = useState<any>(null);
+
+useEffect(() => {
+    setLoading(true);
+    
+    const fetchData = async () => {
+        try {
+            const data = await axios.get("url");
+            setData(data);
+        } catch (e) {
+            setError(e.message);
+        } finally {
+            setLoading(false);
+        }
+    }
+    
+    fetchData();
+}, []);
+```
+
+```tsx
+const [list, setList] = useState([]);
+const [isLoading, setIsLoading] = useState(false);
+const [error, setError] = useState<null | Error>(null);
+
+client("projects", { data: cleanObject(debouncedParam) })
+	.then(setList)
+	.catch(error => {
+    	setList([]);
+    	setError(error);
+	})
+	.finally(() => setIsLoading(false));
+
+return (
+	<Container>
+    	{ error ? <Typeograhy.Text type={"danger"}}>{error.message}</Typeograhy.Text> : null }
+        <List loading={isLoading} users={users} dataSource={list} />
+    </Container>
+);
+```
+
+### Redux中
+
+### RTK中
+
