--- a/01-frontend/03-main-framework/02-react-stack/01-react/06-类组件.md
+++ b/01-frontend/03-main-framework/02-react-stack/01-react/06-类组件.md
@@ -66,7 +66,15 @@ React生命周期指的是类的生命周期，因为函数式组件是没有生
 
 ### constructor
 
-参数：props, context
+| 参数           | 说明               |
+| -------------- | ------------------ |
+| 参数1：props   | 父组件传入的 props |
+| 参数2：context | Context            |
+
+作用：constructor中通常只做两件事情
+
+* 通过给 this.state 赋值对象来初始化内部的state
+* 为组件的事件绑定实例 bind(this)
 
 说明：constructor不属于React内置的生命周期函数，它是ES6中Class的功能
 
@@ -78,17 +86,13 @@ constructor(props) {
 }
 ```
 
-constructor中通常只做两件事情： 
-* 通过给 this.state 赋值对象来初始化内部的state；
-* 为事件绑定实例（this）
-
 ### componentDidMount
 
 参数：无
 
-componentDidMount会在组件挂载后（插入 DOM 树后）立即调用
+说明：componentDidMount会在组件挂载后（插入 DOM 树后）立即调用
 
-componentDidMount中通常进行下列操作
+作用：componentDidMount中通常进行下列操作
 
 * 依赖于DOM的操作可以在这里进行；
 * 在此处发送网络请求就最好的地方（官方建议）
@@ -100,7 +104,10 @@ componentDidMount中通常进行下列操作
 
 ### shouldComponentUpdate
 
-参数：无
+| 参数             | 说明                        |
+| ---------------- | --------------------------- |
+| 参数1：nextProps | 修改后，最新的props属性对象 |
+| 参数2：nextState | 修改后，最新的state属性对象 |
 
 作用：进行性能优化，如果返回false，则不执行render函数，用于性能优化中
 
@@ -108,20 +115,28 @@ componentDidMount中通常进行下列操作
 
 ### getSnapshotBeforeUpdate
 
-在React更新DOM之前回调的一个函数，可以获取DOM更新前的一些信息（比如说滚动位置）；
+参数：无
+
+作用：在React更新DOM之前回调的一个函数，可以获取DOM更新前的一些信息（比如说滚动位置）
+
+返回值：该函数可以返回值，称为snapshot，该值会传给 `ComponentDidUpdate` 函数
 
 ### componentDidUpdate
 
-* prevProps, prevState, snapshot
-  * snapshot从`getSnapshotBeforeUpdate`生命周期中获取
+| 参数      | 说明                                              |
+| --------- | ------------------------------------------------- |
+| prevProps | 更新前的 props                                    |
+| prevState | 更新前的 state                                    |
+| snapshot  | snapshot从`getSnapshotBeforeUpdate`生命周期中获取 |
 
-  * componentDidUpdate会在更新后会被立即调用，**首次渲染不会执行此方法**
+说明：componentDidUpdate会在更新后会被立即调用，**首次渲染不会执行此方法**
+
+作用：
 
 * 当组件更新后，可以在此处对 DOM 进行操作
 
-* 如果你对更新前后的 props 进行了比较，也可以选择在此处进行网络请求
+* 如果对更新前后的 props 进行了比较，也可以选择在此处进行网络请求，例如，当 props 未发生变化时，不执行网络请求
 
-  例如，当 props 未发生变化时，不执行网络请求
 
 
 
@@ -129,13 +144,11 @@ componentDidMount中通常进行下列操作
 
 ### componentWillUnmount
 
-* 参数：无
+参数：无
 
-* 会在组件卸载及销毁之前直接调用
+说明：会在组件卸载及销毁之前直接调用
 
-* 在此方法中执行必要的清理操作
-
-  例如：清除 timer，取消网络请求或取消订阅等
+作用：在此方法中执行必要的清理操作，例如，清除定时器，取消网络请求、取消订阅或解除事件绑定等
 
 
 
@@ -149,12 +162,32 @@ componentDidMount中通常进行下列操作
 
 返回值：JSX
 
-### getDerivedStateFromProps
+### componentDidCatch
 
-参数：
+| 参数      | 说明     |
+| --------- | -------- |
+| error     | 错误对象 |
+| errorInfo | 错误信息 |
 
-state 的值在任何（永远）时候都依赖于 props时使用；该方法返回一个对象来更新state
+作用：当触发错误边界后，用于打印和统计错误信息
 
-因为不会再调用 `Constructor`了，所以需要`getDerivedStateFromProps` 来更新 `state`
+说明：具体看**错误边界**一文
 
-### getDerivedStateFromError
+### static getDerivedStateFromProps
+
+| 参数      | 说明          |
+| --------- | ------------- |
+| nextProps | 更新后的props |
+| prevState | 更新前的state |
+
+作用：该生命周期函数用于获取新的props和旧的state，通过这两个对象，返回一个新的对象作为更新后的 state，即用来更新 state
+
+说明：因为组件更新时不会再调用 `Constructor`了，所以需要`getDerivedStateFromProps` 来更新 `state`
+
+### static getDerivedStateFromError
+
+参数：error对象
+
+作用：捕获后代组件发生的错误，然后更新组件的state，以**渲染后备UI**
+
+说明：具体看**错误边界**一文
