--- a/01-frontend/03-main-framework/02-react-stack/01-react/21-错误边界.md
+++ b/01-frontend/03-main-framework/02-react-stack/01-react/21-错误边界.md
@@ -14,10 +14,10 @@
 
 只有**class**组件能够成为错误边界组件，因为只有**class**组件中有这两个生命周期函数
 
-错误边界**无法**捕获以下场景中产生的错误：
+错误边界**只能捕获后代组件生命周期产生的错误**，而**无法**捕获以下场景中产生的错误：
 
-* 事件处理
-* 异步代码
+* 合成事件处理
+* 异步代码（如定时器事件）
 * 服务器端渲染
 * 它自身抛出的错误（并非它的子组件）
 
@@ -27,8 +27,8 @@
 
 当抛出错误后
 
-* 使用 `getDerivedStateFromError()` 渲染备用 UI 
-* 使用 `componentDidCatch()` 打印错误信息
+* 使用 `getDerivedStateFromError()`：改变组件状态，并渲染备用 UI 
+* 使用 `componentDidCatch()`：打印和统计错误信息
 
 大多数情况下, 你只需要声明一次错误边界组件，就可以在整个应用中使用它
 
@@ -149,3 +149,58 @@ class MyComponent extends React.Component {
 }
 ```
 
+
+
+## 自定义错误边界组件
+
+### 定义错误边界组件
+
+```tsx
+// error-boundary.tsx
+
+import React from "react";
+
+type FallbackRender = (props: { error: Error | null}) => React.ReactElement
+
+// 简化写法
+// 原理：type PropsWithChildren<P> = P & { children?: ReactNode };
+
+export class ErrorBoundary extends React.Component<React.PropsWithChildren<{fallbackRender: FallbackRender}>, {error: Error | null}> {
+    constructor() {
+        this.state = { 
+            error: null 
+       	};
+    }
+    
+    static getDerivedStateFromError(error: Error) {
+        // 子组件发生异常后，会调用这个方法
+       	setState({ error }); // 这句话可以省略，因为会自动重新render
+        return { error } // 返回的对象，会直接赋值给state，即相当于 state = { error }
+    }
+    
+    render() {
+        const { error } = this.state;
+        const { fallbackRender, children } = this.props;
+        
+        if (error) {
+            return fallbackRender({ error });
+        }
+        return children;
+    }
+}
+```
+
+### 使用错误边界
+
+```tsx
+// App.tsx
+function App() {
+    const { user } = useAuth();
+    
+    return (
+    	<ErrorBoundary fallbackRender={FullPageErrorFallback}>
+        	{ user ? <AuthenticatedApp /> : <UnauthenticatedApp />}
+        </ErrorBoundary>
+    );
+}
+```
