--- a/01-frontend/03-main-framework/02-react-stack/01-react/22-性能优化.md
+++ b/01-frontend/03-main-framework/02-react-stack/01-react/22-性能优化.md
@@ -268,6 +268,12 @@ export default function memo(type, compare) {
 }
 ```
 
+### 使用心得
+
+在大部分情况下，都是没有必要使用 memo 高阶组件的，因为 react 本身已经足够快了，而且 memo 本身进行的浅层比较也会消耗性能
+
+即只有在确实需要时（比如组件渲染很慢）才使用 memo 组件来优化
+
 
 
 ## hooks优化
