--- a/01-frontend/03-main-framework/02-react-stack/02-react-router/01-前端路由发展历史.md
+++ b/01-frontend/03-main-framework/02-react-stack/02-react-router/01-前端路由发展历史.md
@@ -18,7 +18,7 @@
 
 当页面中需要请求不同**路径**内容时，交给服务器来进行处理，服务器渲染好整个页面，并将页面返回给客户端
 
-* 一个页面有自己对应的网址，也就是URL
+* 一个页面有自己对应的网址，也就是URL（一一对应）
 * URL会发送到服务器，服务器会通过正则对该URL进行匹配，并且最后交给一个Controller进行处理
 * Controller进行各种处理，最终生成HTML或者数据，返回给前端，这就完成了一个IO操作
 
