--- a/01-frontend/03-main-framework/02-react-stack/02-react-router/04-核心组件与用法.md
+++ b/01-frontend/03-main-framework/02-react-stack/02-react-router/04-核心组件与用法.md
@@ -65,6 +65,7 @@ Route只有在匹配成功时才渲染
 | component | 设置渲染的组件                                               |
 | exact     | 精准匹配，只有精准匹配到完全一致的路径，才会渲染对应的组件；默认为false，只要前缀相同即认为匹配 |
 | strict    | 严格匹配，如果为true，路由后面有斜杠而url中没有斜杠时是不匹配的；默认为false，即有无斜杠都匹配 |
+| render    | RenderProps，直接提供渲染函数                                |
 
 ### 示例代码
 
@@ -86,6 +87,7 @@ class App extends React.Component {
         <Route exact path="/" component={Home} />
         <Route path="/news" component={News} />
         <Route path="/music" strict component={Music} />
+        <Route render={() => <h1>404 NOT FOUND 页面丢失了</h1>} />
       </Router>
     );
   }
