--- a/01-frontend/03-main-framework/02-react-stack/02-react-router/05-编程式路由.md
+++ b/01-frontend/03-main-framework/02-react-stack/02-react-router/05-编程式路由.md
@@ -30,7 +30,7 @@
 | ------------------ | ------------------------------------------------------------ |
 | 直接通过props      | `Route`组件的`component`属性指定的组件将会自动注入路由对象   |
 | withRouter高阶组件 | 对于非`component`属性指定的组件，可以使用`withRouter`高阶组件注入路由对象到props中 |
-| hooks              | 对于任意组件，都可以hooks来获取路由对象**（推荐）**          |
+| hooks钩子          | 对于任意组件，都可以hooks来获取路由对象**（推荐）**          |
 
 ### 示例代码
 
