--- a/01-frontend/01-basic/05-typescript/09-声明文件.md
+++ b/01-frontend/01-basic/05-typescript/09-声明文件.md
@@ -1,8 +1,8 @@
 ## 定义
 
-由于TypeScirpt出现的比较晚，所以有很多流行的第三方库是使用JavaScript编写的，所以不具有TypeScript的能力
+> js文件 + d.ts 文件 = ts 文件
 
-如果想让第三方库支持 TpyeScript 的能力，则需要为其添加它的声明文件（d.ts），才能获得代码补全和提示
+由于TypeScirpt出现的比较晚，所以有很多流行的第三方库是使用JavaScript编写的，所以不具有TypeScript的能力，如果想让第三方库支持 TpyeScript 的能力，则要为其添加它的声明文件（d.ts），才能获得代码补全和提示
 
 
 
