--- a/01-frontend/02-advance/03-skills/07-网络请求.md
+++ b/01-frontend/02-advance/03-skills/07-网络请求.md
@@ -216,3 +216,18 @@ return (
 
 ### RTK中
 
+
+
+## 网络过慢面临的问题
+
+### 问题
+
+在表单操作中，当用户的网速过慢，且用户操作过快时，可能连续发出去好几个请求，但响应返回的顺序有问题，从而导致渲染有问题
+
+### 例子
+
+比如表单分为5页，用户连续依次点击第2、3、4页，但由于用户网速过慢，响应依次是第3、4、2，则用户感觉是**明明点击的是第4页，但显示的是第2页内容**
+
+### 解决
+
+在获取到响应前，禁用组件的功能，即按了第2页后，禁用下一页按钮，直到获取到响应
