--- a/01-frontend/03-main-framework/01-vue-stack/02-vue3/05-组件化.md
+++ b/01-frontend/03-main-framework/01-vue-stack/02-vue3/05-组件化.md
@@ -297,6 +297,20 @@ app.component("base-input", {
 <input v-bind="$attrs" />
 ```
 
+### 父组件调用子组件的方法
+
+#### 原理
+
+获取到子组件实例
+
+#### 方法
+
+| 方法            | 说明                                                         |
+| --------------- | ------------------------------------------------------------ |
+| 使用ref         | ref直接获取子组件实例，推荐                                  |
+| 使用$children   | $children获取所有子组件实例，从数组中选择对应的子组件，不太推荐 |
+| 使用事件emmiter | 使用事件发射器，需要使用第三方事件发射器，推荐 `mitt` 库     |
+
 
 
 ## 组件之间通信-子传父
@@ -409,6 +423,12 @@ app.component("counter", {
     template: `<div @click="handleClick">{{ count }}</div>`
 })
 ```
+
+### 触发事件与回调函数
+
+在 React 中，如果想要实现子传父通信，则需要父组件通过props传递一个**回调函数**给子组件，而 Vue 中则使用**触发事件**的方式来实现子传父通信
+
+但是，本质上，在 Vue 中，也可以使用传递回调函数的方式来实现子传父通信的效果，那么在这两种方式中，该如何进行取舍？——取决于子组件**是否需要得到父组件的函数执行的返回值**，如果需要获取返回值，则使用回调函数，否则使用触发事件
 
 
 
