--- a/01-frontend/03-main-framework/01-vue-stack/03-vue-router/02-基础使用.md
+++ b/01-frontend/03-main-framework/01-vue-stack/03-vue-router/02-基础使用.md
@@ -64,6 +64,10 @@ router-link是导航组件，会被渲染为a标签
 <router-link to="{ path: '/user', query: { id: 5 } }" replace />
 ```
 
+### router-link与a标签区别
+
+`router-link`组件最终会被渲染为 `a` 标签，那么`router-link`组件与直接写`a`标签区别在于：`a`标签会刷新页面，而`router-link`组件不会刷新页面
+
 
 
 ## router-view组件
