--- a/01-frontend/03-main-framework/01-vue-stack/03-vue-router/04-动态路由.md
+++ b/01-frontend/03-main-framework/01-vue-stack/03-vue-router/04-动态路由.md
@@ -15,7 +15,9 @@
 | /user/:id            | /user/5          | {id: 5}              |
 | /user/:id/post/:name | /user/5/post/lee | {id: 5, post: 'lee'} |
 
-### 注意事项
+
+
+## 解除组件复用
 
 动态路由访问的是同一个组件，所以组件会被复用，生命周期不会被再次执行，那么怎么监听路由的变化？
 
