--- a/01-frontend/03-main-framework/02-react-stack/02-react-router/05-编程式路由.md
+++ b/01-frontend/03-main-framework/02-react-stack/02-react-router/05-编程式路由.md
@@ -207,12 +207,13 @@ this.props.location.hash;
 
 ### 概述
 
-| 常用Hooks     | 说明                   |
-| ------------- | ---------------------- |
-| useHistory    | 获取 history 对象      |
-| useLocation   | 获取 location 对象     |
-| useRouteMatch | 获取 match对象         |
-| useParams     | 获取 match.params 对象 |
+| 常用Hooks       | 说明                   |
+| --------------- | ---------------------- |
+| useHistory      | 获取 history 对象      |
+| useLocation     | 获取 location 对象     |
+| useRouteMatch   | 获取 match对象         |
+| useParams       | 获取 match.params 对象 |
+| useSearchParams | 获取 query字符串       |
 
 ### 路由切换
 
