--- a/02-backend/05-nginx/04-动静分离.md
+++ b/02-backend/05-nginx/04-动静分离.md
@@ -101,3 +101,48 @@ location ^~ /tea/ {
 
 * 请求：http://demo.com/tea/main.html
 * 实际访问：`/usr/local/nginx/html/tea/main.html`
+
+
+
+## 配置前端 history 模式路由
+
+### 指令介绍
+
+使用 `try_files` 指令，设置当资源访问失败后定向到 `index.html`
+
+指令格式：`try_files file ... uri`
+
+### 例子
+
+```nginx
+server {
+	listen 80;
+    server_name demo.mneumi.cn;
+
+	location /{
+        root /opt/html/;
+        try_files $uri $uri/ /default.gif; 
+    }
+```
+
+当请求 `http://demo.mneumi.cn/test.gif` 时，会按下列顺序依次寻找
+
+1. `http://demo.mneumi.cn/opt/html/test.gif`
+2. `http://demo.mneumi.cn/opt/html/test.gif/index.html`
+3. `http://demo.mneumi.cn/default.gif`
+
+### 具体配置
+
+```nginx
+server {
+    listen 80;
+    server_name demo.mneumi.cn;
+
+    location / {
+        root /home/menumi/demo;
+        try_files $uri $uri/ /index.html;
+        index index.html;
+    }
+}
+```
+
