--- a/01-frontend/01-basic/03-javascript/73-专题：同源策略与跨域请求.md
+++ b/01-frontend/01-basic/03-javascript/73-专题：同源策略与跨域请求.md
@@ -88,6 +88,7 @@ A网站服务器接收到B网站发过来的请求，服务器看到有正确的
 
 * JSONP
 * CORS
+* Nginx
 * WebSocket
 * iframe
 
@@ -116,7 +117,7 @@ Script标签发送的请求不是`Ajax`请求，而是普通`HTTP`请求
 服务器收到请求后，将数据放在一个指定名字的回调函数（函数名可约定，或通过地址参数传递）里传回来，例如
 
 ```js
-callback({"name": "alice", "age":20})
+callback({ "name": "alice", "age":20 });
 ```
 
 通过`script`标签的特点：立即执行请求回来的语句，即相当于执行了回调函数，从而实现了跨域获取数据的目的
@@ -189,7 +190,7 @@ jQuery在`$.ajax`中封装好了JSONP，只要指定`dataType: "jsonp"`即可
 
 ## CORS
 
-> 来源自 http://www.ruanyifeng.com/blog/2016/04/cors.html
+> 来源自阮一峰老师博客：http://www.ruanyifeng.com/blog/2016/04/cors.html
 
 ### 概述
 
@@ -400,12 +401,35 @@ Access-Control-Allow-Origin: http://api.bob.com
 Content-Type: text/html; charset=utf-8
 ```
 
-
-
-## CORS与JSONP区别
+### CORS与JSONP区别
 
 CORS与JSONP的使用目的相同，但是比JSONP更强大
 
 JSONP只支持`GET`请求，CORS支持所有类型的HTTP请求
 
 JSONP的优势在于支持老式浏览器，以及可以向不支持CORS的网站请求数据
+
+
+
+## Nginx解决跨域
+
+### 概述
+
+可以通过配置 nginx，让其添加 header，实现 CORS跨域
+
+### 示例配置
+
+```nginx
+location / {  
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+    add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+
+    if ($request_method = 'OPTIONS') {
+        return 204;
+    }
+    
+    proxy_pass http://localhost:8888
+}
+```
+
