--- a/01-frontend/01-basic/05-typescript/02-类型增强.md
+++ b/01-frontend/01-basic/05-typescript/02-类型增强.md
@@ -671,6 +671,8 @@ function add(first: object | NumberObj, second: object | NumberObj) {
 
 ### 示例
 
+示例1
+
 ```ts
 interface Bird {
     breath: boolean;
@@ -705,6 +707,14 @@ function trainAnimal(animal: Bird | Dog) {
     }
 }
 ```
+
+示例2
+
+```typescript
+const isError = (value: any): value is Error => value?.message;
+```
+
+
 
 
 
