--- a/01-frontend/01-basic/03-javascript/83-自己实现：常用组件.md
+++ b/01-frontend/01-basic/03-javascript/83-自己实现：常用组件.md
@@ -40,21 +40,55 @@ window.addEventListener("scroll", throttle(lazyImgLoad));
 
 使用`IntersectionObserver API`，能够监听元素是否到了当前视口的事件
 
+```html
+<img class="img-lazy-load" data-src="http://demo/1.png" src="default-img" />
+<img class="img-lazy-load" data-src="http://demo/2.png" src="default-img" />
+<img class="img-lazy-load" data-src="http://demo/3.png" src="default-img" />
+```
+
 ```js
 function lazyImgLoad() {
     // 创建观察器，并设置好回调函数
-    const observer = new IntersectionObserver(changes => {
-       changes.forEach(element => {
+    const observer = new IntersectionObserver(entries => {
+       entries.forEach(element => {
            if (element.intersectionRatio > 0 && element.intersectionRatio <= 1) {
-               element.target.src = element.target.dataset.src;
+               // 获取DOM节点
+               const target = element.target;
+               // 获取真正的图片地址
+        	   const imgUrl = target.dataset.src;
+               // 设置图片地址
+               target.src = imgUrl;
+               // 取消对该元素的监听
+               observer.unobserve(target);
            }
        });
     });
     
-    // 获取所有图片对象，并注册进观察器
-    const imgs = document.getElementsByTagName("img");
-    imgs.forEach(item => observer.observe(item));
+    // 获取所有需要懒加载的对象，并注册进观察器
+    Array.from(document.querySelectorAll(".img-lazy-load")).forEach((item) => {
+        intersectionObserver.observe(item);
+    });
 }
+```
+
+
+
+## 无限滚动
+
+使用前提：在列表下方加一个尾栏（class为`scrollFooter`），观察这个尾栏，判断是否需要加载新元素
+
+```js
+const intersectionObserver = new IntersectionObserver((entries) => {
+    // 如果不可见，证明视口还没有显示到列表，直接返回
+    if (entries[0].interscetionRatio < 0) {
+        return;
+    }
+    // 加载元素
+    loadItems(10);
+    console.log("加载了新的元素");
+});
+
+intersectionObserver.observe(document.querySelector(".scrollFooter"));
 ```
 
 
