--- a/01-frontend/01-basic/03-javascript/40-网络请求.md
+++ b/01-frontend/01-basic/03-javascript/40-网络请求.md
@@ -344,7 +344,7 @@ fetch(url, {
 
 ### Fetch缺点
 
-* 只对网络请求报错，对于4xx，5xx状态码，都认为是成功的
+* **只对网络请求报错，对于4xx，5xx状态码，都认为是成功的，都不会抛出异常**
 * 默认不会携带Cookie
 * 不支持Abort，不支持超时控制
 * 没办法检测请求的进度
