--- a/02-backend/01-golang/01-go/24-Go包管理.md
+++ b/02-backend/01-golang/01-go/24-Go包管理.md
@@ -1,8 +1,10 @@
-## 传统包管理
-
-最原始的包管理方法，存在很多缺点，不推荐使用
+## Go Path
 
 ### 概述
+
+最原始的包管理方法，存在很多缺点，如没有版本管理，不推荐使用
+
+### 使用
 
 传统包管理需要设置环境变量`$GOPATH`，且要求`$GOPATH`中有`src`，`bin`，`pkg`三个文件夹
 
@@ -11,6 +13,12 @@
 | src  | 存放源码                     |
 | pkg  | 用于存放编译后生成的归档文件 |
 | bin  | 用于存放编译后生成可执行文件 |
+
+### 注意事项
+
+一定要将GO111MODULE设置为off或auto
+
+查找顺序：gopath/src再看goroot/src
 
 ### 缺点
 
@@ -22,11 +30,11 @@
 
 
 
-## Vendor
-
-曾经的包管理方案，在 `Go Module` 推出后，不建议再使用 `vendor` 管理方案
+## Vendor模式
 
 ### 概述
+
+曾经的包管理方案，在 `Go Module` 推出后，不建议再使用 `vendor` 管理方案
 
 `Go`从版本`1.5`开始开始引入`vendor`模式：如果项目目录下有`vendor`目录，那么会优先使用`vendor`内的包进行编译、测试等
 
@@ -68,7 +76,9 @@ go get github.com/tools/godep
 
 ## Go Module
 
-在 `Go1.13` 后 `Go Module` 是官方推荐的默认包管理工具
+### 概述
+
+在 `Go1.13` 后 `Go Module` 是官方推荐的默认包管理工具，推荐使用
 
 ### Go Module 优点
 
@@ -76,7 +86,7 @@ go get github.com/tools/godep
 2. 项目不必放在`$GOPATH/src`内了
 3. 项目内会生成一个`go.mod`文件，列出包依赖
 4. 所以来的第三方包会准确的指定版本号
-5. 对于已经转移的包，可以用`replace`声明替换，不需要改代码
+5. 对于已经转移的包，可以用`replace`声明替换，不需要改`import`代码
 
 ### Go Module前置设置
 
