--- a/02-backend/01-golang/01-go/19-Go包.md
+++ b/02-backend/01-golang/01-go/19-Go包.md
@@ -1,8 +1,10 @@
-## 包的概述、作用
+## 概述
 
-### 概述
+### 定义
 
-`Go` 中每一个文件都属于一个包
+`Go`中一个包对应一个文件夹，文件夹中的文件名可以随意起名，但是每个文件的第一行必须要求是 `package 包名`，而且必须是同一个，即**一个文件夹中的源码不能出现多个package**
+
+`Go` 中每一个文件都属于一个包，`包名`和`文件夹名`不要求一致，目录名，文件名，包名三者不需要相同
 
 ### 作用
 
@@ -10,9 +12,7 @@
 
 对函数以及变量进行管理，控制函数，变量的作用域
 
-
-
-## 包的命名规范
+### 命名规范
 
 包的名字规范是全小写且不用 `_` 进行分隔，比如
 
@@ -23,7 +23,15 @@ package databasemodel
 
 
 
-## 声明包
+## 包的种类
+
+1. Go语言自带的标准包
+2. 自己写的包
+3. 第三方包
+
+
+
+## 包的声明
 
 在`go`源文件第一行进行定义
 
@@ -35,7 +43,9 @@ package 包名 // 源文件第一行
 
 ## 包的导入
 
-传统包依赖管理：包名是从 `$GOPATH/src/` 之后开始计算的，使用`/`进行分隔，包名需要用`""`进行包裹
+### import语句
+
+`import`后面跟的不是`包名`，而是`包的路径`
 
 ```go
 // 单个导入
@@ -50,6 +60,12 @@ import (
 )
 ```
 
+### 搜索路径
+
+传统包依赖管理：`标准库($GOROOT/src)` ==> `$GOPATH/src`
+
+### 别名机制
+
 导入包时，可以给包起别名，从而避免冲突
 
 * 如果别名是 `_` 则说明只执行该包的`init`函数，而不导入该包内容
@@ -58,8 +74,10 @@ import (
 ```go
 // 如果包太长，可以给包改名，也可以避免重名的问题
 import util "os/ioutil"
-// 只执行 mysql 包的 init 函数，而不导入 mysql 包
+
+// 匿名导入：导入却不使用（目的是为了执行 init 函数）
 import _ "mysql"
+
 // 将 fmt 包中的导出内容混入到当前文件中
 import . "fmt"
 
@@ -67,6 +85,8 @@ func main() {
   Println("fmt包的导出内容混入到当前文件中了")
 }
 ```
+
+### 导入路径
 
 导入包可以写绝对路径和相对路径
 
@@ -82,19 +102,14 @@ import (
 
 
 
-## 包的搜索路径
-
-传统包依赖管理：`标准库($GOROOT/src)` ==> `$GOPATH/src`
-
-
-
 ## 包的init函数
 
-一个包一旦被导入，就会自动执行这个包中的 `init` 函数，`init`函数只能由`Go`来调用，程序员无法主动调用
+1. 一个包一旦被导入，就会自动执行这个包中的 `init` 函数，`init`函数只能由`Go`来调用，程序员无法主动调用
 
-一个包中可以有多个 `init` 函数，但最好只有一个
+2. 一个包中可以有多个 `init` 函数，但最好只有一个
 
-包的`init`函数只会执行一次，哪怕它被多处导入，也只会执行一次
+3. 包的`init`函数只会执行一次，哪怕它被多处导入，也只会执行一次
+4. 包可以重复引用，且只会实际执行init函数一次
 
 ![](./images/image-20200308140714300.png)
 
@@ -104,19 +119,23 @@ import (
 
 ## 包的注意事项
 
-不能将多个包放在同一目录下，也不能将一个包拆分到多个目录下，总结：一个包唯一对应一个目录
+1. 不能将多个包放在同一目录下，也不能将一个包拆分到多个目录下，总结：一个包唯一对应一个目录
 
-目录名，文件名，包名三者不需要相同，三者名称不同也符合规定
+2. 目录名，文件名，包名三者不需要相同，三者名称不同也符合规定
 
-如果导入了包而不使用则会编译错误，如果只想执行包中的 `init` 函数而不想使用，则可以用 `_`
+3. 如果导入了包而不使用则会编译错误，如果只想执行包中的 `init` 函数而不想使用，则可以用 `_`
 
-```go
-import _ "mysql"
-```
+   ```go
+   import _ "mysql"
+   ```
 
-如果想要定义一个 `Go` 文件是可执行文件，则需要将这个文件所属包声明为 `main`
+4. 如果想要定义一个 `Go` 文件是可执行文件，则需要将这个文件所属包声明为 `main`
 
-`main`包中不同的文件的代码不能互相调用，即`main `包最好只有一个文件
+   `main`包中不同的文件的代码不能互相调用，即`main `包最好只有一个文件
+
+5. 导入的是路径，使用的是包名
+
+6. 包不能出现循环引用问题
 
 
 
